--- a/A4_RenderingColor/MacbethRecreation.ipynb
+++ b/A4_RenderingColor/MacbethRecreation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -19,68 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Column names are ï»¿W, I\n",
-      "379\n",
-      "Column names are ï»¿wavelength, 1\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 2\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 3\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 4\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 5\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 6\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 7\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 8\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 9\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 10\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 11\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 12\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 13\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 14\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 15\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 16\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 17\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 18\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 19\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 20\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 21\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 22\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 23\n",
-      "62\n",
-      "Column names are ï»¿wavelength, 24\n",
-      "Processed 62 lines.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Macbeth\n",
     "mwh = []\n",
@@ -463,22 +406,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Column names are wl,  r,  g,  b\n",
-      "Processed 77 lines.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Sensitivity Sony DXC 930\n",
+    "#Sensitivity Sony DXC 930 https://nae-lab.org/~rei/research/cs/zhao/database.html \n",
     "wale=[]\n",
     "R=[]\n",
     "G=[]\n",
@@ -501,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -516,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -529,22 +463,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAW0AAAD8CAYAAAC8TPVwAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAABQ5JREFUeJzt27FrHnUAx+F7JYOZBKFYlQiFLg6CaMA6FBEcjLWgm0MG\nBQdJdHDoqujawUETHAQdMrgp1JoOgkiHVogiOLgIBYNaEQSnuJ1/wu9dwssHnmc+jvtyx4ffcot5\nnicAGu5Z9QMAsDzRBggRbYAQ0QYIEW2AENEGCBFtgBDRBggRbYCQtdO46XtbT6d/s3z38NZidM3t\nD95Mb7zw9kfDjVuvf5zeePjJG8ON0zRNV/ba3+vV3fH3unPldnrj/tULS73LD/+7kd751r3PD3c6\naQOEiDZAiGgDhIg2QIhoA4SINkCIaAOEiDZAiGgDhIg2QIhoA4SINkCIaAOEiDZAiGgDhIg2QIho\nA4SINkCIaAOEiDZAiGgDhIg2QIhoA4SINkCIaAOEiDZAiGgDhIg2QIhoA4SINkCIaAOEiDZAiGgD\nhIg2QIhoA4SINkCIaAOEiDZAiGgDhIg2QIhoA4SINkCIaAOEiDZAiGgDhIg2QIhoA4Qs5nle9TMA\nsCQnbYAQ0QYIEW2AENEGCBFtgBDRBggRbYAQ0QYIWTuNm/57+eH0Hzv3Xft9MbrmsWevpzf+/O2l\n4ca/t15Lbzxz+Olw4zRN0wsXP0vv/Prmq8Od1344n954+clfl3qX0/sb6Z3TO8fDnU7aACGiDRAi\n2gAhog0QItoAIaINECLaACGiDRAi2gAhog0QItoAIaINECLaACGiDRAi2gAhog0QItoAIaINECLa\nACGiDRAi2gAhog0QItoAIaINECLaACGiDRAi2gAhog0QItoAIaINECLaACGiDRAi2gAhog0QItoA\nIaINECLaACGiDRAi2gAhog0QItoAIaINECLaACGiDRAi2gAhog0QspjnedXPAMCSnLQBQkQbIES0\nAUJEGyBEtAFCRBsgRLQBQkQbIES0AULWTuOmDz16Pf2b5R+/XFqMrtn57vH0xv1nfhpu/O2Jp9Ib\nH/nx++HGaZqmf754IL3z/pf/Gu78/MVv0htf+eq5pd7lxS/vpHfefOnccKeTNkCIaAOEiDZAiGgD\nhIg2QIhoA4SINkCIaAOEiDZAiGgDhIg2QIhoA4SINkCIaAOEiDZAiGgDhIg2QIhoA4SINkCIaAOE\niDZAiGgDhIg2QIhoA4SINkCIaAOEiDZAiGgDhIg2QIhoA4SINkCIaAOEiDZAiGgDhIg2QIhoA4SI\nNkCIaAOEiDZAiGgDhIg2QIhoA4SINkCIaAOEiDZAiGgDhCzmeV71MwCwJCdtgBDRBggRbYAQ0QYI\nEW2AENEGCBFtgBDRBggRbYCQtdO46fHxnfRvlhsb5xaja/b39tIbd3Z3hxu3t7fTGw8ODoYbp2ma\nNjc30zuPjo6GO8+efTC98e7dP5d6l+vr6+mdJycnw51O2gAhog0QItoAIaINECLaACGiDRAi2gAh\nog0QItoAIaINECLaACGiDRAi2gAhog0QItoAIaINECLaACGiDRAi2gAhog0QItoAIaINECLaACGi\nDRAi2gAhog0QItoAIaINECLaACGiDRAi2gAhog0QItoAIaINECLaACGiDRAi2gAhog0QItoAIaIN\nECLaACGiDRAi2gAhog0QItoAIaINELKY53nVzwDAkpy0AUJEGyBEtAFCRBsgRLQBQkQbIES0AUJE\nGyBEtAFCRBsgRLQBQkQbIES0AUJEGyBEtAFCRBsgRLQBQkQbIES0AUJEGyBEtAFCRBsgRLQBQv4H\n/yxv7RC39BAAAAAASUVORK5CYII=\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x17718c1cba8>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fig = plt.figure()\n",
     "for i in range(1,25):\n",
