--- a/A6_CIE_Chromaticity_Chart/CIExy_chart_BBLocus.ipynb
+++ b/A6_CIE_Chromaticity_Chart/CIExy_chart_BBLocus.ipynb
@@ -102,14 +102,14 @@
    "outputs": [],
    "source": [
     "#Values for Blackbody Locus\n",
-    "xb = np.zeros(9)\n",
-    "yb = np.zeros(9)\n",
-    "zb = np.zeros(9)\n",
+    "xb = np.zeros(11)\n",
+    "yb = np.zeros(11)\n",
+    "zb = np.zeros(11)\n",
     "wav = np.array(wale)*nm\n",
     "i=0\n",
     "\n",
-    "Temps = [\"1K\",\"1.5K\",\"2K\",\"2.5K\",\"3K\",\"4K\",\"5K\",\"8K\",r\"$T_c(K) = \\inf$\"] #labels\n",
-    "for T in (1000,1500,2000,2500,3000,4000,5000,8000,10000000000): #Blackbody at diffT\n",
+    "Temps = [\"1K\",\"2K\",\"3K\",\"4K\",\"5K\",\"6K\",\"7K\",\"8K\", \"9K\",\"10K\",r\"$T_c(K) = \\inf$\"] #labels\n",
+    "for T in (1000,2000,3000,4000,5000,6000,7000,8000,9000,10000,10000000000): #Blackbody at diffT\n",
     "    P = B(wav,T)\n",
     "\n",
     "    Xb = np.multiply(P,X[0:57])\n",
@@ -145,9 +145,22 @@
     "plt.plot(xb,yb,'.-',color='k')\n",
     "o=0\n",
     "for l,m in zip(xb,yb):\n",
-    "    if o==8: \n",
-    "        plt.annotate(Temps[o],xy=(l-0.15,m+0.02))\n",
+    "    if o==10: \n",
+    "        plt.annotate(Temps[o],xy=(l-0.17,m))\n",
     "        break\n",
+    "    elif o==5 or o==7:\n",
+    "        plt.annotate(Temps[o],xy=(l-0.05,m+0.01))\n",
+    "        o+=1\n",
+    "        continue\n",
+    "        \n",
+    "    elif o==6 or o==8:\n",
+    "        plt.annotate(Temps[o],xy=(l+0.02,m-0.02))\n",
+    "        o+=1\n",
+    "        continue\n",
+    "    elif o==9:\n",
+    "        plt.annotate(Temps[o],xy=(l-0.08,m-0.01))\n",
+    "        o+=1\n",
+    "        continue    \n",
     "    plt.annotate(Temps[o],xy=(l-0.02,m+0.02))\n",
     "    o+=1\n",
     "\n",
